# ploio_agent

./: .gitignore  README  README.md
docs/: MODULE-CONVENTION.md  PROTOCOL.md  WEB-PROTOCOL.md  deploy.md
docs/benchmarks/: IO.md
src/: .dockerignore  Dockerfile  Frouros.sln  Frouros.sln.DotSettings
src/Frouros/: Frouros.csproj  Frouros.http  Program.cs  appsettings.json  publish.sh  run.sh
src/Frouros.ARP/: Frouros.ARP.csproj
src/Frouros.ARP/Protos/: arp.proto
src/Frouros.Host/: Frouros.Host.csproj  Program.cs
src/Frouros.Host/Bridges/: Netfilter.cs
src/Frouros.Host/Imports/: Native.cs
src/Frouros.Host/Models/: PVIEvent.cs  PacketHandle.cs
src/Frouros.Host/Properties/: launchSettings.json
src/Frouros.Host/Protos/: arp.proto  cri.proto  pvi.proto
src/Frouros.Host/Repositories/: ARPTable.cs  ApplicationInformation.cs  CAMTable.cs  PodAuthRepository.cs
src/Frouros.Host/Services/: ARPService.cs  CRIService.cs  PVIService.cs
src/Frouros.Host/Workers/: CRIWorker.cs  PVIWorker.cs  PrivilegeWorker.cs
src/Frouros.Proxy/: Frouros.Proxy.csproj  Program.cs  app.config
src/Frouros.Proxy/Bridges/: Membrane.cs
src/Frouros.Proxy/Collections/: AsyncEnumerableExtension.cs
src/Frouros.Proxy/Models/: ModuleHandle.cs  ModuleMessage.cs  PacketRegistry.cs  PacketRegistryContainer.cs
src/Frouros.Proxy/Net/: Grpc.cs
src/Frouros.Proxy/Protos/: arp.proto
src/Frouros.Proxy/Workers/: CRIWorker.cs  (+3 more)
src/Frouros.Shared/: Frouros.Shared.csproj  Specials.cs
src/Frouros.Test/: Frouros.Test.csproj  Program.cs
src/fr-nf/: CMakeLists.txt
src/fr-nf/src/: main.cc
(+60 files in other folders)
